--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>회원가입</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -54,6 +55,7 @@
                     form.submit();
                     MemberJoin__submitDone = true;
                 }
+
             </script>
 
 
@@ -87,10 +89,7 @@
                     <input class="btn btn-primary" type="submit" value="회원가입">
                 </div>
 
-                <div class="flex justify-center">
-                    <a href="/member/findUsername" class="btn btn-link">아이디찾기</a>
-                    <a href="/member/findPassword" class="btn btn-link">비밀번호 찾기</a>
-                </div>
+
             </form>
         </div>
 
