스프링시큐리티 문제 해결중

--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -63,7 +63,7 @@
                     <label class="label">
                         <span class="label-text">아이디</span>
                     </label>
-                    <input autofocus type="text" name="userName" placeholder="아이디" class="input input-bordered"
+                    <input autofocus type="text" name="username" placeholder="아이디" class="input input-bordered"
                            maxlength="50">
                 </div>
 
