--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -44,14 +44,98 @@
     </div>
 
     <!-- 사용자 주소 -->
+<!--    <div>-->
+<!--        <label for="address">사용자 주소:</label>-->
+<!--        <input id="address" required th:field="*{address}" type="text">-->
+<!--    </div>-->
+
+    <!--카카오 주소검색 API-->
     <div>
-        <label for="address">사용자 주소:</label>
-        <input id="address" required th:field="*{address}" type="text">
+        <label for="sample4_postcode">우편번호:</label>
+        <input id="sample4_postcode" required type="text" th:field="*{postalNum}">
+    </div>
+    <input type="button" onclick="sample4_execDaumPostcode()" value="우편번호 찾기"><br>
+    <div>
+        <label for="sample4_roadAddress">도로명주소:</label>
+        <input id="sample4_roadAddress" type="text" th:field="*{roadAddress}">
+    </div>
+    <div>
+        <label for="sample4_jibunAddress">지번주소:</label>
+        <input id="sample4_jibunAddress" type="text" th:field="*{jibunAddress}">
+    </div>
+    <span id="guide" style="color:#999;display:none"></span>
+    <div>
+        <label for="sample4_detailAddress">상세주소:</label>
+        <input id="sample4_detailAddress" type="text" th:field="*{detailAddress}">
+    </div>
+    <div>
+        <label for="sample4_extraAddress">참고항목:</label>
+        <input id="sample4_extraAddress" type="text" th:field="*{extraAddress}">
     </div>
 
-    <!-- 카카오맵 지도영역 -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script>
+    //본 예제에서는 도로명 주소 표기 방식에 대한 법령에 따라, 내려오는 데이터를 조합하여 올바른 주소를 구성하는 방법을 설명합니다.
+    function sample4_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var roadAddr = data.roadAddress; // 도로명 주소 변수
+                var extraRoadAddr = ''; // 참고 항목 변수
+
+                // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                    extraRoadAddr += data.bname;
+                }
+                // 건물명이 있고, 공동주택일 경우 추가한다.
+                if(data.buildingName !== '' && data.apartment === 'Y'){
+                   extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                }
+                // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                if(extraRoadAddr !== ''){
+                    extraRoadAddr = ' (' + extraRoadAddr + ')';
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('sample4_postcode').value = data.zonecode;
+                document.getElementById("sample4_roadAddress").value = roadAddr;
+                document.getElementById("sample4_jibunAddress").value = data.jibunAddress;
+
+                // 참고항목 문자열이 있을 경우 해당 필드에 넣는다.
+                if(roadAddr !== ''){
+                    document.getElementById("sample4_extraAddress").value = extraRoadAddr;
+                } else {
+                    document.getElementById("sample4_extraAddress").value = '';
+                }
+
+                var guideTextBox = document.getElementById("guide");
+                // 사용자가 '선택 안함'을 클릭한 경우, 예상 주소라는 표시를 해준다.
+                if(data.autoRoadAddress) {
+                    var expRoadAddr = data.autoRoadAddress + extraRoadAddr;
+                    guideTextBox.innerHTML = '(예상 도로명 주소 : ' + expRoadAddr + ')';
+                    guideTextBox.style.display = 'block';
+
+                } else if(data.autoJibunAddress) {
+                    var expJibunAddr = data.autoJibunAddress;
+                    guideTextBox.innerHTML = '(예상 지번 주소 : ' + expJibunAddr + ')';
+                    guideTextBox.style.display = 'block';
+                } else {
+                    guideTextBox.innerHTML = '';
+                    guideTextBox.style.display = 'none';
+                }
+            }
+        }).open();
+    }
+</script>
+
+    <!-- 카카오맵 지도영역 API -->
     <div id="map" style="width:500px;height:400px;"></div>
-    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29a0c927015ac2aacc00215b1a91d7f3" type="text/javascript"></script>
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29a0c927015ac2aacc00215b1a91d7f3"
+            type="text/javascript"></script>
     <script>
 		var container = document.getElementById('map');
 		var options = {
@@ -74,13 +158,12 @@
 
         // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
         // marker.setMap(null);
-
     </script>
     <!-- 우편번호 -->
-    <div>
-        <label for="postalNum">우편번호:</label>
-        <input id="postalNum" required th:field="*{postalNum}" type="number">
-    </div>
+<!--    <div>-->
+<!--        <label for="postalNum">우편번호:</label>-->
+<!--        <input id="postalNum" required th:field="*{postalNum}" type="number">-->
+<!--    </div>-->
 
     <!-- 연락처 -->
     <div>
@@ -155,6 +238,7 @@
             errorMessage.style.display = 'block';
         }
     }
+
 
 </script>
 </html>
