--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-
-<head>
-    <title>로그인</title>
-</head>
-
-<body>
-<main>
+<html layout:decorate="~{/layout/layout}">
+<main layout:fragment="content">
     <section class="section section-login flex-grow flex flex-col items-center justify-center">
 
         <div class="max-w-md w-full px-2 pt-4">
@@ -77,9 +71,5 @@
                 </div>
             </form>
         </div>
-
     </section>
-
 </main>
-</body>
-</html>
