--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -12,59 +12,26 @@
         <div class="max-w-md w-full px-2 pt-4">
             <h1 class="font-bold text-lg">
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
-
                 로그인
             </h1>
-
-            <script>
-                let MemberLogin__submitDone = false;
-
-                function MemberLogin__submit(form) {
-                    if (MemberLogin__submitDone) {
-                        return;
-                    }
-
-                    form.username.value = form.username.value.trim();
-
-                    if (form.username.value.length == 0) {
-                        warningModal("아이디를 입력해주세요.");
-                        form.username.focus();
-
-                        return;
-                    }
-
-                    form.content.value = form.content.value.trim();
-
-                    if (form.content.value.length == 0) {
-                        warningModal("비밀번호를 입력해주세요.");
-                        form.content.focus();
-
-                        return;
-                    }
-
-                    form.submit();
-                    MemberLogin__submitDone = true;
-                }
-
-            </script>
-
-
-            <form class="flex flex-col gap-3" method="POST" onsubmit="MemberLogin__submit(this); return false;"
-                  th:action="@{/member/login}">
+            <form class="flex flex-col gap-3" method="POST" th:action="@{/member/login}">
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger">
+                        사용자ID 또는 비밀번호를 확인해 주세요.
+                    </div>
+                </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">아이디</span>
                     </label>
-                    <input autofocus class="input input-bordered" maxlength="50" name="userName" placeholder="아이디"
-                           type="text">
+                    <input autofocus class="input input-bordered" maxlength="50" name="username" id="username" placeholder="아이디" type="text">
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">비밀번호</span>
                     </label>
-                    <input class="input input-bordered" maxlength="50"
-                           name="password" placeholder="비밀번호" type="password">
+                    <input class="input input-bordered" maxlength="50" name="password" id="password" placeholder="비밀번호" type="password">
                 </div>
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
@@ -99,4 +66,5 @@
 
 </main>
 </body>
+
 </html>
