--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<main layout:fragment="main">
+<main layout:fragment="content">
     <section class="section section-profile flex-grow flex flex-col items-center justify-center">
 
         <div class="max-w-md w-full px-2 pt-4">
@@ -20,43 +20,45 @@
                     <label class="label">
                         <span class="label-text">아이디</span>
                     </label>
-                    <div class="badge badge-primary" th:text="${@rq.member.username}"></div>
+                    <div class="badge badge-primary" th:text="${#authentication.principal.nickName + ' 님'}"></div>
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">가입날짜</span>
                     </label>
-                    <div class="badge badge-primary"
-                         th:text="${#temporals.format(@rq.member.createDate, 'yy-MM-dd HH:mm')}"></div>
+                    <div class="badge badge-primary" th:text="${#temporals.format(#authentication.principal.createDate, 'yy-MM-dd HH:mm')}"></div>
+<!--                    <div class="badge badge-primary"-->
+<!--                         th:text="${#temporals.format(@rq.member.createDate, 'yy-MM-dd HH:mm')}"></div>-->
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">이메일</span>
                     </label>
-                    <div class="badge badge-primary" th:text="${@rq.member.email}"></div>
+                    <div class="badge badge-primary" th:text="${#authentication.principal.email}"></div>
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">필명</span>
                     </label>
-                    <div class="badge badge-primary"
-                         th:text="${@rq.member.nickname != null ? @rq.member.nickname : '-'}"></div>
+                    <div class="badge badge-primary" th:text="${#authentication.principal.nickName + ' 님'}"></div>
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">프로필이미지</span>
                     </label>
-                    <svg width="100" height="100" th:data-jdenticon-value="${@rq.member.jdenticon}"></svg>
+                    <img alt="" th:if="${userImg}" th:src="${userImg}"/>
+                    <img alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                         th:unless="${userImg}"/>
                 </div>
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
                     <a href="/member/modifyPassword" class="btn btn-secondary btn-outline">비밀번호 변경</a>
-                    <a th:unless="${@rq.hasAuthority('AUTHOR')}" href="/member/beAuthor" class="btn btn-primary">작가활동 시작</a>
-                    <a th:if="${@rq.hasAuthority('AUTHOR')}" class="btn btn-primary btn-disabled">이미 작가회원입니다.</a>
+<!--                    <a th:unless="${@rq.hasAuthority('AUTHOR')}" href="/member/beAuthor" class="btn btn-primary">작가활동 시작</a>-->
+<!--                    <a th:if="${@rq.hasAuthority('AUTHOR')}" class="btn btn-primary btn-disabled">이미 작가회원입니다.</a>-->
                 </div>
             </div>
         </div>
