구글 소셜로그인 개발중 요청오류

--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -222,32 +222,27 @@
                 </script>
 
                 <!-- 카카오맵 지도영역 API -->
-                <div id="map" style="width:500px;height:400px;"></div>
-                <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29a0c927015ac2aacc00215b1a91d7f3"
-                        type="text/javascript"></script>
-                <script>
-                var container = document.getElementById('map');
-                var options = {
-                  center: new kakao.maps.LatLng(36.349405, 127.376768),
-                  level: 3
-                };
-                var map = new kakao.maps.Map(container, options);
-                // 마커가 표시될 위치입니다
-                var markerPosition = new kakao.maps.LatLng(36.349405, 127.376768);
-                // 마커를 생성합니다
-                var marker = new kakao.maps.Marker({
-                  position: markerPosition
-                });
-                // 마커가 지도 위에 표시되도록 설정합니다
-                marker.setMap(map);
-                // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
-                // marker.setMap(null);
-
-
-
-
-
-                </script>
+<!--                <div id="map" style="width:500px;height:400px;"></div>-->
+<!--                <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29a0c927015ac2aacc00215b1a91d7f3"-->
+<!--                        type="text/javascript"></script>-->
+<!--                <script>-->
+<!--                var container = document.getElementById('map');-->
+<!--                var options = {-->
+<!--                  center: new kakao.maps.LatLng(36.349405, 127.376768),-->
+<!--                  level: 3-->
+<!--                };-->
+<!--                var map = new kakao.maps.Map(container, options);-->
+<!--                // 마커가 표시될 위치입니다-->
+<!--                var markerPosition = new kakao.maps.LatLng(36.349405, 127.376768);-->
+<!--                // 마커를 생성합니다-->
+<!--                var marker = new kakao.maps.Marker({-->
+<!--                  position: markerPosition-->
+<!--                });-->
+<!--                // 마커가 지도 위에 표시되도록 설정합니다-->
+<!--                marker.setMap(map);-->
+<!--                // 아래 코드는 지도 위의 마커를 제거하는 코드입니다-->
+<!--                // marker.setMap(null);-->
+<!--                </script>-->
 
                 <!-- 연락처 -->
                 <div class="form-control">
